[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/HUDs/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH1.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH4.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/dialogic/Documentation/Theme/DocumentationH3.tres" type="DynamicFont" id=4]

[node name="Options" type="CanvasLayer"]
visible = false
script = ExtResource( 1 )

[node name="Panel_Options" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.588235 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0

[node name="Label" type="Label" parent="Panel_Options"]
anchor_left = 0.312
anchor_top = 0.04
anchor_right = 0.687
anchor_bottom = 0.192
margin_left = 0.399994
margin_right = 0.399963
custom_fonts/font = ExtResource( 4 )
text = "Opções"
align = 1
valign = 1

[node name="Exit" type="Button" parent="Panel_Options"]
anchor_left = 0.925
anchor_top = 0.02
anchor_right = 0.975
anchor_bottom = 0.1
margin_left = -6.10352e-05
custom_constants/hseparation = 0
custom_fonts/font = ExtResource( 3 )
text = "X"
icon_align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel_Options"]
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.8
margin_right = -6.10352e-05
margin_bottom = 50.0

[node name="Window" type="Button" parent="Panel_Options/VBoxContainer"]
margin_right = 399.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Janela"

[node name="Full" type="Button" parent="Panel_Options/VBoxContainer"]
margin_top = 52.0
margin_right = 399.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "FullScreen"

[node name="800x600" type="Button" parent="Panel_Options/VBoxContainer"]
margin_top = 104.0
margin_right = 399.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 2 )
text = "800x600"

[node name="1280x720" type="Button" parent="Panel_Options/VBoxContainer"]
margin_top = 156.0
margin_right = 399.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 2 )
text = "1280x720"

[node name="1920x1080" type="Button" parent="Panel_Options/VBoxContainer"]
margin_top = 208.0
margin_right = 399.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 2 )
text = "1920x1080"

[connection signal="pressed" from="Panel_Options/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="Panel_Options/VBoxContainer/Window" to="." method="_on_Window_toggled"]
[connection signal="toggled" from="Panel_Options/VBoxContainer/Full" to="." method="_on_Full_toggled"]
[connection signal="pressed" from="Panel_Options/VBoxContainer/800x600" to="." method="_on_800x600_pressed"]
[connection signal="pressed" from="Panel_Options/VBoxContainer/1280x720" to="." method="_on_1280x720_pressed"]
[connection signal="pressed" from="Panel_Options/VBoxContainer/1920x1080" to="." method="_on_1920x1080_pressed"]
